Add info icon to free shipping notice

--- a/translations/messages.cs.po
+++ b/translations/messages.cs.po
@@ -4054,3 +4054,5 @@ msgstr ""
 msgid "Žádné slevy na celý nákup nenalezeny."
 msgstr ""
 
+msgid "Doprava zdarma u Zásilkovny od 1000 Kč a u PPL od 2000 Kč"
+msgstr ""
