--- a/translations/messages.en.po
+++ b/translations/messages.en.po
@@ -1294,7 +1294,7 @@ msgstr ""
 msgid "Kód produktu"
 msgstr "Product code"
 
-msgid "Kód vložte v pokladně při dokočení objednávky."
+msgid "Kód vložte v pokladně při dokončení objednávky."
 msgstr ""
 
 msgid "Last name"
